Mild refactor of existing code and add basic Google lookup

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -1,6 +1,9 @@
 play.i18n.langs=["en"]
 
+google.api.key=${?GOOGLE_API_KEY}
+
 evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
+play.modules.enabled += "io.flow.play.clients.ConfigModule"
 
 git.version=0.0.1
