--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -5,3 +5,5 @@ google.api.key=${?GOOGLE_API_KEY}
 evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
+
+play.http.filters=io.flow.play.util.CorsWithLoggingFilter
