--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -6,4 +6,32 @@ evolutionplugin=disabled
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 
+addresses-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+country-defaults-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+timezones-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+google-api-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
 play.http.filters=io.flow.play.util.CorsWithLoggingFilter
