thread futures through for google ec; setReadTimeout on context

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -27,4 +27,11 @@ timezones-controller-context {
   }
 }
 
+google-api-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
 play.http.filters=io.flow.play.util.CorsWithLoggingFilter
