--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -3,6 +3,7 @@ play.i18n.langs=["en"]
 google.api.key=${?GOOGLE_API_KEY}
 
 evolutionplugin=disabled
+play.http.errorHandler = "io.flow.play.util.ErrorHandler"
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 
