add execution contexts (#83)
* add execution contexts

* refactor

* update conf

* thread futures through for google ec; setReadTimeout on context

* add implicit param

* update CountryDefaults controller

* use Future.successful

* Upgrade to play 2.4.8

* organize imports

* Add std error handler

* Mark var prive

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -3,7 +3,36 @@ play.i18n.langs=["en"]
 google.api.key=${?GOOGLE_API_KEY}
 
 evolutionplugin=disabled
+play.http.errorHandler = "io.flow.play.util.ErrorHandler"
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
+
+addresses-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+country-defaults-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+timezones-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+google-api-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
 
 play.http.filters=io.flow.play.util.CorsWithLoggingFilter
