using s3, added to controller

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -2,6 +2,8 @@ play.i18n.langs=["en"]
 
 google.api.key=${?GOOGLE_API_KEY}
 
+digitalelement.file.uri=${?DIGITALELEMENT_FILE_URI}
+
 evolutionplugin=disabled
 play.http.errorHandler = "io.flow.play.util.ErrorHandler"
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
