--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -1,4 +1,4 @@
 include "base.conf"
 
 
-digitalelement.file.uri="file:./test/resources/digitalelement_sample.csv"
+digitalelement.file.uri="s3://io-flow-location/digitalelement/mini.csv"
