--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -10,6 +10,7 @@ evolutionplugin=disabled
 play.http.errorHandler = "io.flow.play.util.ErrorHandler"
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
+play.modules.enabled += "utils.DigitalElementIndexModule"
 
 addresses-controller-context {
   fork-join-executor {
