--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -5,12 +5,23 @@ google.api.key=${?GOOGLE_API_KEY}
 digitalelement.file.uri="s3://io-flow-location/digitalelement/edge/0508_mini.csv"
 digitalelement.file.uri=${?DIGITALELEMENT_FILE_URI}
 
+graphite.api.key=${?CONF_GRAPHITE_API_KEY}
+graphite.api.host=${?CONF_GRAPHITE_API_HOST}
+graphite.api.port=${?CONF_GRAPHITE_API_PORT}
+
+kamon.statsd.hostname=${?CONF_STATSD_API_HOST}
+kamon.statsd.port=${?CONF_STATSD_API_PORT}
+statsd.api.key=${?CONF_STATSD_API_KEY}
+kamon.statsd.metric-key-generator= io.flow.play.metrics.kamon.MetricKeyGenerator
+# override buggy default config!
+kamon.internal-config.akka.actor.provider = "akka.actor.LocalActorRefProvider"
 
 evolutionplugin=disabled
 play.http.errorHandler = "io.flow.play.util.ErrorHandler"
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 play.modules.enabled += "utils.DigitalElementIndexModule"
+play.modules.enabled += "io.flow.play.metrics.MetricsModule"
 
 addresses-controller-context {
   fork-join-executor {
