--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -7,15 +7,18 @@ google.api.key=${?GOOGLE_API_KEY}
 digitalelement.file.uri="s3://io-flow-location/digitalelement/edge/0508_mini.csv"
 digitalelement.file.uri=${?DIGITALELEMENT_FILE_URI}
 
-graphite.api.key=${?CONF_GRAPHITE_API_KEY}
 graphite.api.host=${?CONF_GRAPHITE_API_HOST}
-graphite.api.port=${?CONF_GRAPHITE_API_PORT}
+graphite.api.port=${?CONF_GRAPHITE_API_PORT_PICKLE}
+graphite.api.key=${?CONF_GRAPHITE_API_KEY}
 
-kamon.statsd.hostname=${?CONF_STATSD_API_HOST}
-kamon.statsd.port=${?CONF_STATSD_API_PORT}
-statsd.api.key=${?CONF_STATSD_API_KEY}
-kamon.statsd.metric-key-generator= io.flow.play.metrics.kamon.MetricKeyGenerator
-# override buggy default config!
+kamon.graphite.hostname=${?CONF_GRAPHITE_API_HOST}
+kamon.graphite.port=${?CONF_GRAPHITE_API_PORT}
+kamon.graphite.key=${?CONF_GRAPHITE_API_KEY}
+
+kamon.graphite.percentiles = [90, 99]
+kamon.graphite.metric-key-generator=io.flow.play.metrics.kamon.MetricKeyGenerator
+
+# override default config
 kamon.internal-config.akka.actor.provider = "akka.actor.LocalActorRefProvider"
 
 evolutionplugin=disabled
