--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -22,11 +22,16 @@ kamon.graphite.metric-key-generator=io.flow.play.metrics.kamon.MetricKeyGenerato
 kamon.internal-config.akka.actor.provider = "akka.actor.LocalActorRefProvider"
 
 evolutionplugin=disabled
+
+play.filters.disabled += play.filters.hosts.AllowedHostsFilter
 play.http.errorHandler = "io.flow.play.util.ErrorHandler"
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
+play.http.secret.key=${?CONF_PLAY_CRYPTO_SECRET}
+
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
-play.modules.enabled += "utils.DigitalElementIndexModule"
+play.modules.enabled += "io.flow.play.controllers.FlowControllerComponentsModule"
 play.modules.enabled += "io.flow.play.metrics.MetricsModule"
+play.modules.enabled += "utils.DigitalElementIndexModule"
 
 addresses-controller-context {
   fork-join-executor {
