--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -25,6 +25,7 @@ evolutionplugin=disabled
 
 play.filters.disabled += play.filters.hosts.AllowedHostsFilter
 play.http.errorHandler = "io.flow.play.util.ErrorHandler"
+play.http.filters=io.flow.play.util.LoggingFilter
 play.http.requestHandler="play.http.DefaultHttpRequestHandler"
 play.http.secret.key=${?CONF_PLAY_CRYPTO_SECRET}
 
@@ -60,6 +61,3 @@ google-api-context {
     parallelism-max = 20
   }
 }
-
-play.http.filters=io.flow.play.util.CorsWithLoggingFilter
-git.version=0.2.53
