Update configuration files to Flow Standard

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -1,33 +1,31 @@
-name="location"
+name = "location"
 
-play.i18n.langs=["en"]
+digitalelement.file.uri = "s3://io-flow-location/digitalelement/edge/0508_mini.csv"
+digitalelement.file.uri = ${?DIGITALELEMENT_FILE_URI}
 
-google.api.key=${?GOOGLE_API_KEY}
+evolutionplugin = "disabled"
 
-digitalelement.file.uri="s3://io-flow-location/digitalelement/edge/0508_mini.csv"
-digitalelement.file.uri=${?DIGITALELEMENT_FILE_URI}
+google.api.key = ${?GOOGLE_API_KEY}
 
-graphite.api.host=${?CONF_GRAPHITE_API_HOST}
-graphite.api.port=${?CONF_GRAPHITE_API_PORT_PICKLE}
-graphite.api.key=${?CONF_GRAPHITE_API_KEY}
+graphite.api.host = ${?CONF_GRAPHITE_API_HOST}
+graphite.api.key = ${?CONF_GRAPHITE_API_KEY}
+graphite.api.port = ${?CONF_GRAPHITE_API_PORT_PICKLE}
 
-kamon.graphite.hostname=${?CONF_GRAPHITE_API_HOST}
-kamon.graphite.port=${?CONF_GRAPHITE_API_PORT}
-kamon.graphite.key=${?CONF_GRAPHITE_API_KEY}
-
+kamon.graphite.hostname = ${?CONF_GRAPHITE_API_HOST}
+kamon.graphite.key = ${?CONF_GRAPHITE_API_KEY}
+kamon.graphite.metric-key-generator = "io.flow.play.metrics.kamon.MetricKeyGenerator"
 kamon.graphite.percentiles = [90, 99]
-kamon.graphite.metric-key-generator=io.flow.play.metrics.kamon.MetricKeyGenerator
-
-# override default config
+kamon.graphite.port = ${?CONF_GRAPHITE_API_PORT}
 kamon.internal-config.akka.actor.provider = "akka.actor.LocalActorRefProvider"
 
-evolutionplugin=disabled
+play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 
-play.filters.disabled += play.filters.hosts.AllowedHostsFilter
 play.http.errorHandler = "io.flow.play.util.ErrorHandler"
-play.http.filters=io.flow.play.util.LoggingFilter
-play.http.requestHandler="play.http.DefaultHttpRequestHandler"
-play.http.secret.key=${?CONF_PLAY_CRYPTO_SECRET}
+play.http.filters = "io.flow.play.util.LoggingFilter"
+play.http.requestHandler = "play.http.DefaultHttpRequestHandler"
+play.http.secret.key = ${?CONF_PLAY_CRYPTO_SECRET}
+
+play.i18n.langs = ["en"]
 
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 play.modules.enabled += "io.flow.play.controllers.FlowControllerComponentsModule"
