--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -1,3 +1,5 @@
 include "base.conf"
 
-digitalelement.file.uri="s3://io-flow-location/digitalelement/edge/0538.csv"
+digitalelement.file.uri = "s3://io-flow-location/digitalelement/edge/0538.csv"
+
+play.http.secret.key = ${CONF_PLAY_CRYPTO_SECRET}
