--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -1,5 +1,5 @@
 include "base.conf"
 
-digitalelement.file.uri = "s3://io-flow-location/digitalelement/edge/0538.csv"
+digitalelement.file.uri = ${DIGITALELEMENT_FILE_URI}
 
 play.http.secret.key = ${CONF_PLAY_CRYPTO_SECRET}
