Update configuration to support longer uris for pagination

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -1,6 +1,18 @@
 name = "location"
 
+akka.http.parsing.max-uri-length = 16384
+
 evolutionplugin = "disabled"
+
+git.version = "0.2.84"
+git.version = "0.2.89"
+git.version = "0.2.92"
+git.version = "0.2.93"
+git.version = "0.2.97"
+git.version = "0.3.10"
+git.version = "0.3.2"
+git.version = "0.3.5"
+git.version = "0.3.7"
 
 google.api.key = ${?GOOGLE_API_KEY}
 
@@ -26,6 +38,8 @@ play.i18n.langs = ["en"]
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 play.modules.enabled += "io.flow.play.metrics.MetricsModule"
 play.modules.enabled += "utils.DigitalElementIndexModule"
+
+play.server.netty.maxInitialLineLength = 16384
 
 addresses-controller-context {
   fork-join-executor {
@@ -54,12 +68,3 @@ google-api-context {
     parallelism-max = 20
   }
 }
-git.version=0.2.84
-git.version=0.2.89
-git.version=0.2.92
-git.version=0.2.93
-git.version=0.2.97
-git.version=0.3.2
-git.version=0.3.5
-git.version=0.3.7
-git.version=0.3.10
