--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -4,16 +4,6 @@ akka.http.parsing.max-uri-length = 16384
 
 evolutionplugin = "disabled"
 
-git.version = "0.2.84"
-git.version = "0.2.89"
-git.version = "0.2.92"
-git.version = "0.2.93"
-git.version = "0.2.97"
-git.version = "0.3.10"
-git.version = "0.3.2"
-git.version = "0.3.5"
-git.version = "0.3.7"
-
 google.api.key = ${?GOOGLE_API_KEY}
 
 graphite.api.host = ${?CONF_GRAPHITE_API_HOST}
@@ -55,6 +45,13 @@ country-defaults-controller-context {
   }
 }
 
+healthchecks-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
 timezones-controller-context {
   fork-join-executor {
     parallelism-factor = 2
@@ -68,5 +65,3 @@ google-api-context {
     parallelism-max = 20
   }
 }
-git.version=0.3.16
-git.version=0.3.20
