--- a/.apibuilder/config
+++ b/.apibuilder/config
@@ -8,6 +8,10 @@ code:
       version: latest
       generators:
         play_2_x_json: generated/app
+    google-places:
+      version: latest
+      generators:
+        play_2_6_client: generated/app
     healthcheck:
       version: latest
       generators:
