Add InternalAddress endpoint to include street number in response

--- a/.apibuilder/config
+++ b/.apibuilder/config
@@ -22,6 +22,11 @@ code:
       generators:
         play_2_x_routes: api/conf/location.routes
         play_2_6_client: generated/app
+    location-internal:
+      version: latest
+      generators:
+        play_2_x_routes: api/conf/locationinternal.routes
+        play_2_6_client: generated/app
     reference:
       version: latest
       generators:
