--- a/.apibuilder/config
+++ b/.apibuilder/config
@@ -3,26 +3,26 @@ code:
     common:
       version: latest
       generators:
-        play_2_x_json: generated/app
+        play_2_x_json: .apibuilder/src/main/scala
     error:
       version: latest
       generators:
-        play_2_x_json: generated/app
+        play_2_x_json: .apibuilder/src/main/scala
     google-places:
       version: latest
       generators:
-        play_2_6_client: generated/app
+        play_2_6_client: .apibuilder/src/main/scala
     healthcheck:
       version: latest
       generators:
-        play_2_6_client: generated/app
+        play_2_6_client: .apibuilder/src/main/scala
         play_2_x_routes: api/conf/healthcheck.routes
     location:
       version: latest
       generators:
         play_2_x_routes: api/conf/location.routes
-        play_2_6_client: generated/app
+        play_2_6_client: .apibuilder/src/main/scala
     reference:
       version: latest
       generators:
-        play_2_6_client: generated/app
+        play_2_6_client: .apibuilder/src/main/scala
