Remove play.api.Logger and add Rollbar

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -25,11 +25,14 @@ play.http.secret.key = ${?CONF_PLAY_CRYPTO_SECRET}
 
 play.i18n.langs = ["en"]
 
+play.modules.enabled += "io.flow.log.RollbarModule"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 play.modules.enabled += "io.flow.play.metrics.MetricsModule"
 play.modules.enabled += "utils.DigitalElementIndexModule"
 
 play.server.netty.maxInitialLineLength = 16384
+
+rollbar.token = ${?ROLLBAR_TOKEN}
 
 addresses-controller-context {
   fork-join-executor {
