--- a/.apibuilder/config
+++ b/.apibuilder/config
@@ -16,12 +16,14 @@ code:
       version: latest
       generators:
         play_2_6_client: generated/app
+        play_2_6_controllers: generated/app
         play_2_x_routes: api/conf/healthcheck.routes
     location:
       version: latest
       generators:
         play_2_x_routes: api/conf/location.routes
         play_2_6_client: generated/app
+        play_2_6_controllers: generated/app
     reference:
       version: latest
       generators:
