Revert "Use only the default context (#404)"
This reverts commit 6bdd3aea7c58fe91b12845245e8abbcf36a309f3.

--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -6,6 +6,8 @@ evolutionplugin = "disabled"
 
 google.api.key = ${?GOOGLE_API_KEY}
 
+
+
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 
 play.http.errorHandler = "io.flow.play.util.ErrorHandler"
@@ -24,4 +26,38 @@ play.server.netty.maxInitialLineLength = 16384
 
 rollbar.token = ${?ROLLBAR_TOKEN}
 
+addresses-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+country-defaults-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+healthchecks-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+timezones-controller-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
+
+google-api-context {
+  fork-join-executor {
+    parallelism-factor = 2
+    parallelism-max = 20
+  }
+}
 git.version=0.6.87
