--- a/deploy/location/templates/deployment.yaml
+++ b/deploy/location/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
           imagePullPolicy: {{ $.Values.image.pullPolicy }}
           env:
             - name: JAVA_OPTS
-              value: "-Xms{{ $.Values.jvmMemory}}m -Xmx{{ $.Values.jvmMemory}}m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt -XX:FlightRecorderOptions=stackdepth=256 -XX:MaxGCPauseMillis=100 -XX:+UseStringDeduplication -XX:G1ReservePercent=20 -XX:InitiatingHeapOccupancyPercent=35"
+              value: "-Xms{{ $.Values.jvmMemory}}m -Xmx{{ $.Values.jvmMemory}}m -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/opt -XX:FlightRecorderOptions=stackdepth=256 -XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:+UseStringDeduplication"
             - name: FLOW_KUBERNETES_NODE_NAME
               valueFrom:
                 fieldRef:
