--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -1,15 +1,12 @@
-nameOverride: ""
-fullnameOverride: ""
+nameOverride: "location"
+fullnameOverride: "location"
 
-service:
-  port: 9000
-  metricsEndpoint:
-    enabled: false
+team: "core"
 
 iamRole: arn:aws:iam::479720515435:role/ecsInstanceRole
 image:
   repository: flowcommerce/location
-  pullPolicy: IfNotPresent
+
 resources:
   limits:
     memory: "7100Mi"
@@ -18,43 +15,18 @@ resources:
     memory: "7100Mi"
     cpu: 1
 
-jvmMemory: 6100
-
-nodeSelector: {} 
-tolerations: {} 
-
-ingress:
-  enabled: true
-  gateways:
-    - key: location-flow-io
-      tld: api.flow.io
-      hosts:
-        - location.api.flow.io
-    - key: location-flow-pub
-      tld: flo.pub
-      hosts:
-        - location.flo.pub
-
-services:
-  live:
-    hosts:
-      - location
-      - location.api.flow.io
-      - location.flo.pub
-    gateways:
-      - mesh
-      - location-flow-io
-      - location-flow-pub
-    stages:
-      - deployment: live
-        weight: 100
+jvmOpts:
+    memory: 6100m
 
 deployments:
   live:
     minReplicas: 3
     maxReplicas: 3
     maxUnavailable: 1
-    disruptionBudgetEnabled: true
-    targetCPUUtilizationPercentage: 80
-    version: #from commandline
-    strategy: RollingUpdate
+
+rolloutResource:
+    enabled: false
+
+canary: 
+    # Disable this to follow the default RollingUpdate Strategy
+    enabled: false
