--- a/deploy/location/requirements.yaml
+++ b/deploy/location/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
-    - name: flow-generic-scala
+    - name: flow-generic
       version: 1.3.5
       repository: https://flow.jfrog.io/artifactory/api/helm/generic-charts-helm
       
