--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -24,10 +24,24 @@ deployments:
     maxReplicas: 3
     maxUnavailable: 1
 
-rolloutResource:
-    enabled: false
-
-canary: 
-    # Disable this to follow the default RollingUpdate Strategy
-    enabled: false
-    
+rollout:
+  enabled: true
+  migration: true
+  analysis:
+    - name: error-rate
+      successCondition: default(result, 0) <= 0.0
+      provider:
+        datadog:
+          query: |
+            sum:trace.akka_http.request.errors{service:location}.as_count()  /
+            sum:trace.akka_http.request.hits{service:location}.as_count()
+    - name: response-time-p50
+      successCondition: default(result, 0) < 0.002
+      provider:
+        datadog:
+          query: p50:trace.akka_http.request{service:location}
+    - name: response-time-p95
+      successCondition: default(result, 0) < 0.1
+      provider:
+        datadog:
+          query: p95:trace.akka_http.request{service:location}
