--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -25,21 +25,10 @@ deployments:
 
 rollout:
   enabled: true
-  analysis:
-    - name: error-rate
+  defaultAnalysis:
+    errorRate:
       successCondition: default(result, 0) <= 0.0
-      provider:
-        datadog:
-          query: |
-            sum:trace.akka_http.request.errors{service:location}.as_count()  /
-            sum:trace.akka_http.request.hits{service:location}.as_count()
-    - name: response-time-p50
+    p50ResponseTime:
       successCondition: default(result, 0) < 0.002
-      provider:
-        datadog:
-          query: p50:trace.akka_http.request{service:location}
-    - name: response-time-p95
+    p95ResponseTime:
       successCondition: default(result, 0) < 0.1
-      provider:
-        datadog:
-          query: p95:trace.akka_http.request{service:location}
