--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -1,5 +1,9 @@
 nameOverride: "location"
 fullnameOverride: "location"
+service:
+  startupHealthcheckEndpoint: /_internal_/startup
+  livenessHealthcheckEndpoint: /_internal_/live
+  readinessHealthcheckEndpoint: /_internal_/ready
 
 team: "core"
 
