FDN-1246-monitor-rollout adding monitor trace.akka_http.request.errors-sum

--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -38,3 +38,6 @@ rollout:
       failureLimit: 1
     p95ResponseTime:
       successCondition: default(result, 0) < 0.1
+
+datadogMonitors:
+- type: trace.akka_http.request.errors-sum
