--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -19,6 +19,7 @@ play.modules.enabled += "io.flow.log.RollbarModule"
 play.modules.enabled += "io.flow.play.clients.ConfigModule"
 play.modules.enabled += "io.flow.play.metrics.MetricsModule"
 play.modules.enabled += "utils.DigitalElementIndexModule"
+play.modules.enabled += "utils.Ip2LocationIndexModule"
 
 play.server.netty.maxInitialLineLength = 16384
 
