--- a/api/conf/application.production.conf
+++ b/api/conf/application.production.conf
@@ -1,5 +1,7 @@
 include "base.conf"
 
 digitalelement.file.uri = ${DIGITALELEMENT_FILE_URI}
+ip2location.v4.file.uri = ${DIGITALELEMENT_FILE_URI}
+ip2location.v6.file.uri = ${DIGITALELEMENT_FILE_URI}
 
 play.http.secret.key = ${CONF_PLAY_CRYPTO_SECRET}
