--- a/api/conf/application.conf
+++ b/api/conf/application.conf
@@ -1,3 +1,5 @@
 include "base.conf"
 
 digitalelement.file.uri = "s3://io-flow-location/digitalelement/edge/0508_mini.csv"
+ip2location.v4.file.uri = "s3://io-flow-location/digitalelement/edge/0508_mini.csv"
+ip2location.v6.file.uri = "s3://io-flow-location/digitalelement/edge/0508_mini.csv"
