--- a/api/conf/base.conf
+++ b/api/conf/base.conf
@@ -5,6 +5,8 @@ akka.http.parsing.max-uri-length = 16384
 evolutionplugin = "disabled"
 
 google.api.key = ${?GOOGLE_API_KEY}
+ip2location.v4.file.uri = ${?IP2LOCATION_V4_FILE_URI}
+ip2location.v6.file.uri = ${?IP2LOCATION_V6_FILE_URI}
 
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 
