--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -15,9 +15,10 @@ image:
 resources:
   limits:
     memory: "7100Mi"
+    cpu: 2
   requests:
     memory: "7100Mi"
-    cpu: 1
+    cpu: 500m
 
 jvmOpts:
     memory: 6100m
