FDN-2872:Migration of Location service to karpenter node pools (#544)
* Migration of Location service to karpenter node pools

* reverted memory

* add cpu in resource limits to avoid oom due to thread counts

--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -15,12 +15,23 @@ image:
 resources:
   limits:
     memory: "7100Mi"
+    cpu: 2
   requests:
     memory: "7100Mi"
-    cpu: 1
+    cpu: 500m
 
 jvmOpts:
     memory: 6100m
+
+nodeSelector:
+  karpenter/role: workers
+tolerations:
+  - key: "role"
+    operator: "Equal"
+    value: "workers"
+    effect: "NoSchedule"
+topologySpreadConstraints:
+  schedule: "DoNotSchedule"
 
 deployments:
   live:
