FDN-3102: Adding missing metrics dd monitor

--- a/deploy/location/values.yaml
+++ b/deploy/location/values.yaml
@@ -54,3 +54,4 @@ rollout:
 datadogMonitors:
 - type: trace.akka_http.request.errors-sum
 - type: trace.akka_http.request-avg
+- type: missing-metrics
